--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,25 @@
     "dev": "nodemon server.js",
     "seed": "node seed.js"
   },
-  "keywords": ["express", "mongodb", "hoa", "motions", "voting"],
+  "keywords": [
+    "express",
+    "mongodb",
+    "hoa",
+    "motions",
+    "voting"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.20.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.7.1",
+    "express-openid-connect": "^2.19.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1"
+    "mongodb": "^6.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
