--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "db:up": "docker compose up -d mongo",
+    "db:down": "docker compose down",
+    "migrate:dry": "node backend/scripts/migrate-members-to-roles.js --mongo-uri=\"mongodb://127.0.0.1:27017/commie_dev\" --dry-run",
+    "migrate:run": "node backend/scripts/migrate-members-to-roles.js --mongo-uri=\"mongodb://127.0.0.1:27017/commie_dev\" --dry-run=false",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -20,7 +24,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
